--- a/tailwindcss/index1.css
+++ b/tailwindcss/index1.css
@@ -62,3 +62,37 @@
   top: 10px;  
   left: 60px;  
 } */
+
+.skills{
+    display: grid;
+     /* grid-template-columns: auto auto auto auto; */
+     
+     /* justify-items: center; */
+     /* align-items: center; */
+     /* /* grid-template-columns: auto auto auto auto; */
+     grid-template-columns: repeat(4,1fr);
+     
+}
+
+@media (max-width:768px) {
+    .skills{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+
+@media (max-width:480px) {
+    .skills{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+
+.bgimage {
+  /* background: url("http://3.bp.blogspot.com/_EqZzf-l7OCg/TNmdtcyGBZI/AAAAAAAAAD8/KD5Y23c24go/s1600/homer-simpson-1280x1024.jpg") no-repeat; */
+  width: 400px;
+  height: 400px;
+  display: block;
+  border: 1px solid;
+  /* border-radius: 200px; */
+  background-size: cover;
+}
